--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap');
+
+
 * {
   box-sizing: border-box;
 }
@@ -21,7 +24,8 @@ li {
 
 h1,
 h3,
-h4, p {
+h4,
+p {
   margin: 0;
   padding: 0;
 }
@@ -29,7 +33,7 @@ h4, p {
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .wrapper {
@@ -119,7 +123,7 @@ body {
   padding: 11px 39px;
   border-radius: 10px;
   background-color: #3882f6;
-  color: #ffffff;
+  color: #e5e7eb;
 }
 
 .btn:hover {
@@ -129,7 +133,7 @@ body {
 
 .gallery-section,
 .action-section {
-  background-color: #ffffff;
+  background-color: #f9faf8;
 }
 
 .gallery-section .section-wrapper {
@@ -161,7 +165,7 @@ body {
 }
 
 .cards-item-img {
-  border: #3882f6 solid 3px;
+  border: #3882f6 solid 4px;
   border-radius: 10px;
   width: 168px;
   height: 168px;
@@ -173,4 +177,63 @@ body {
 
 .quote-section {
   background-color: #e5e7eb;
+}
+
+.quote-section .section-wrapper {
+  justify-content: center;
+}
+
+.quote-info {
+  max-width: 798px;
+  margin-top: 80px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  color: #1F2937;
+}
+
+.quote-author {
+  font-weight: 900;
+  font-size: 20px;
+}
+
+.action-form {
+  height: 150px;
+  background-color: #3882f6;
+  color: #e5e7eb;
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 120px;
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 100px;
+  margin-top: 80px;
+}
+
+.action-title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.action-btn {
+  font-size: 18px;
+  padding: 11px 39px;
+  border-radius: 10px;
+  background-color: #3882f6;
+  color: #e5e7eb;
+  border: #e5e7eb solid 3px;
+  height: 50px;
+  margin: auto 0;
+}
+
+.footer {
+  padding: 40px;
 }
