--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -169,6 +169,17 @@ body {
   border-radius: 10px;
   width: 168px;
   height: 168px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cards-item-img img{
+  transition: transform .2s;
+}
+
+.cards-item-img:hover img{
+  transform: scale(1.25);
 }
 
 .cards-item-text {
